feat: assign expert to round category